@@ -11,6 +11,7 @@ import static org.opentripplanner.street.model.StreetTraversalPermission.PEDESTR
 import java.time.Duration;
 import java.time.format.DateTimeParseException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -156,14 +157,31 @@ public abstract class OsmEntity {
       "foot"
     );
 
-  /* To save memory this is only created when an entity actually has tags. */
-  private Map<String, String> tags;
+  private final Map<String, String> tags;
 
-  protected long id;
+  protected final long id;
 
-  protected I18NString creativeName;
+  private final OsmProvider osmProvider;
 
-  private OsmProvider osmProvider;
+  /**
+   * Because it is expensive to compute the creative way, we do it only once and store the fact in
+   * this boolean.
+   */
+  private boolean creativeNameComputed = false;
+
+  @Nullable
+  private I18NString creativeName;
+
+  /**
+   * Constructor for immutable OsmEntity
+   */
+  protected OsmEntity(long id, Map<String, String> tags, OsmProvider osmProvider) {
+    this.id = id;
+    // calling Map.copyOf here costs about 10% of parsing performance, so we use
+    // Collections.unmodifiableMap in the getter
+    this.tags = tags;
+    this.osmProvider = osmProvider;
+  }
 
   public static boolean isFalse(String tagValue) {
     return ("no".equals(tagValue) || "0".equals(tagValue) || "false".equals(tagValue));
@@ -181,44 +199,10 @@ public abstract class OsmEntity {
   }
 
   /**
-   * Sets the id.
-   */
-  public void setId(long id) {
-    this.id = id;
-  }
-
-  /**
-   * Adds a tag.
-   */
-  public void addTag(OsmTag tag) {
-    if (tags == null) {
-      tags = new HashMap<>();
-    }
-
-    tags.put(tag.getK().toLowerCase(), tag.getV());
-  }
-
-  /**
-   * Adds a tag.
-   */
-  public OsmEntity addTag(String key, String value) {
-    if (key == null || value == null) {
-      return this;
-    }
-
-    if (tags == null) {
-      tags = new HashMap<>();
-    }
-
-    tags.put(key.toLowerCase(), value);
-    return this;
-  }
-
-  /**
-   * The tags of an entity.
+   * The tags of an entity (immutable).
    */
   public Map<String, String> getTags() {
-    return Objects.requireNonNullElse(tags, Map.of());
+    return Collections.unmodifiableMap(tags);
   }
 
   /**
@@ -232,10 +216,6 @@ public abstract class OsmEntity {
    * Determines if a tag contains a false value. 'no', 'false', and '0' are considered false.
    */
   public boolean isTagFalse(String tag) {
-    if (tags == null) {
-      return false;
-    }
-
     return isFalse(getTag(tag));
   }
 
@@ -256,10 +236,6 @@ public abstract class OsmEntity {
    * Determines if a tag contains a true value. 'yes', 'true', and '1' are considered true.
    */
   public boolean isTagTrue(String tag) {
-    if (tags == null) {
-      return false;
-    }
-
     return isTrue(getTag(tag));
   }
 
@@ -316,9 +292,6 @@ public abstract class OsmEntity {
   }
 
   protected boolean isExplicitlyAllowed(String key) {
-    if (tags == null) {
-      return false;
-    }
     if (isTagTrue(key)) {
       return true;
     }
@@ -337,10 +310,8 @@ public abstract class OsmEntity {
    */
   @Nullable
   public String getTag(String tag) {
-    if (tags != null) {
-      return tags.get(tag.toLowerCase());
-    }
-    return null;
+    tag = tag.toLowerCase();
+    return tags.get(tag);
   }
 
   /**
@@ -500,7 +471,7 @@ public abstract class OsmEntity {
    * Checks if a tag contains the specified value.
    */
   public boolean isTag(String tag, String value) {
-    return tags != null && value != null && value.equals(tags.get(tag.toLowerCase()));
+    return value != null && value.equals(tags.get(tag.toLowerCase()));
   }
 
   /**
@@ -521,16 +492,18 @@ public abstract class OsmEntity {
    */
   @Nullable
   public I18NString getAssumedName() {
-    if (tags == null) {
-      return null;
-    }
     if (tags.containsKey("name")) {
       return TranslatedString.getDeduplicatedI18NString(
         this.generateI18NForPattern("{name}"),
         false
       );
     }
-    if (this.creativeName != null) {
+    // because it is expensive to compute the creative way, we do it only once.
+    if (!creativeNameComputed) {
+      this.creativeName = getOsmProvider().getWayPropertySet().getCreativeName(this);
+      this.creativeNameComputed = true;
+    }
+    if (creativeName != null) {
       return this.creativeName;
     }
     if (tags.containsKey("ref")) {
@@ -768,10 +741,6 @@ public abstract class OsmEntity {
     );
   }
 
-  public void setCreativeName(I18NString creativeName) {
-    this.creativeName = creativeName;
-  }
-
   /**
    * Is this way a roundabout?
    */
@@ -818,10 +787,6 @@ public abstract class OsmEntity {
 
   public OsmProvider getOsmProvider() {
     return osmProvider;
-  }
-
-  public void setOsmProvider(OsmProvider provider) {
-    this.osmProvider = provider;
   }
 
   /**
